# pokemon-manager-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
devops/: definitions.json  rabbitmq.conf
src/: .env.example
src/apps/pokemons/: apps.py  models.py
src/apps/pokemons/admin/: __init__.py  create_base_pokemon.py  create_base_pokemon_type.py  create_pokemon.py  delete_base_pokemon.py  delete_base_pokemon_type.py  delete_pokemon.py  list_base_pokemon_types.py  list_base_pokemons.py  list_pokemons.py  router.py
src/apps/pokemons/migrations/: 0001_initial.py  0002_basepokemon_pokemons_ba_name_745923_idx_and_more.py
src/apps/reports/: models.py
src/apps/reports/admin/: __init__.py  delete_report.py  generate_report.py  list_reports.py  router.py  show_report.py
src/apps/reports/migrations/: 0001_initial.py  0002_alter_report_data.py  0003_alter_report_data.py  0004_report_reports_rep_type_9ff8af_idx.py
src/apps/reports/tasks/: __init__.py  generate_highest_level_pokemon_report.py  generate_most_common_base_pokemon_report.py
src/config/: api.py  celery.py  settings.py  urls.py
